Autowired ZipFileManager